PrismTech JAC#507/JAC#596. Minor performance code tweaks and wildcard port binding in portrangesocketfactory